# Pegasus

./: .env  .travis.yml  Cargo.toml  Dockerfile  README.md
front-end/: package-lock.json  package.json
migrations/2020-02-11-080937_users/: up.sql
migrations/2020-02-11-080952_invitations/: up.sql
migrations/2020-02-13-082854_users/: up.sql
migrations/2020-02-22-075750_invitations/: up.sql
migrations/2020-02-28-094958_departments/: up.sql
migrations/2020-03-21-032026_departments/: up.sql
migrations/2020-03-21-071033_invitations/: up.sql
migrations/2020-03-21-112500_users/: up.sql
migrations/2020-03-23-134447_departments/: up.sql
migrations/2020-03-23-134735_users/: down.sql
migrations/2020-03-31-081226_namespaces/: down.sql  up.sql
migrations/2020-04-01-030244_namespaces/: up.sql
migrations/2020-04-16-033244_registries/: down.sql  up.sql
migrations/2020-04-16-035230_repositories/: up.sql
migrations/2020-04-16-070212_repositories/: up.sql
migrations/2020-05-01-093402_repositories/: up.sql
migrations/2020-05-02-062934_tags/: up.sql
src/: main.rs  mw.rs  router.rs
src/errors/: api_error.rs  mod.rs  service_error.rs
src/handlers/: .#invitation_handles.rs  .#node_handlers.rs  .#user_handlers.rs  cluster_admin_handlers.rs  depart_handlers.rs  ing_handlers.rs  invitation_handlers.rs  kube_test_handlers.rs  mod.rs  node_handlers.rs  ns_handlers.rs  repos_handlers.rs  tasks_handlers.rs  user_handlers.rs
src/models/: db.rs  department.rs  gitapis.rs  ingress.rs  invitation.rs  kube.rs  mod.rs  namespace.rs  registry.rs  repository.rs  tag.rs  (+1 more)
(+10 files in other folders)
