[package]
name = "pegasus"
version = "0.1.0"
authors = ["Inno Jia <jdgets111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0"
actix-service = "1.0.1"
actix-web = "2.0.0"
listenfd = "0.3"
serde = "1.0.104"
futures = "0.3.3"