[package]
name = "pegasus"
version = "0.1.0"
authors = ["Inno Jia <jdgets111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-redis = "0.8.0"
actix-rt = "1.0"
actix-service = "1.0.1"
actix-session = "0.3.0"
actix-web = "2.0.0"
chrono = { version="0.4.10", features=["serde"] }
derive_more = "0.99"
diesel = { version="1.4.3", features=["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.6"
hex = "0.4"
lazy_static = "1.0.3"
lettre = "0.9.2"
lettre_email = "0.9.2"
listenfd = "0.3"
log = "0.4"
r2d2 = "0.8.8"
rand = "0.7.3"
reqwest = "0.9"
rust-argon2 = "0.8.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.47"
time = "0.1.42"
uuid = { version="0.7.4", features=["serde", "v4"] }